# rune

./: .gitignore  CMakeLists.txt  LICENSE  TODO  config.h.in  format_code.sh  main.cpp  readme.md  todo.md
ast/: CMakeLists.txt  ast.cpp  ast.hpp  builtins.cpp  builtins.hpp  notes.md  type.hpp
codegen/: CMakeLists.txt  c_gen.cpp  c_gen.hpp
doc/: design.md
doc/examples/: dyn_array.rn  test.rn  test.rune
lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp  lexer_utils.hpp
parser/: CMakeLists.txt  parser.cpp  parser.hpp  parser_calls.cpp  parser_declarations.cpp  parser_expressions.cpp  parser_literals.cpp  parser_scope.cpp  parser_statements.cpp  scope_stack.hpp
test/: catch.hpp  test_main.cpp
tokens/: tokens.hpp
utils/: CMakeLists.txt  memory_arena.hpp  memory_arena_test.cpp  slice.hpp  string_slice.hpp  tokens.hpp
